--- a/app/src/main/res/layout/fragment_discipline_form.xml
+++ b/app/src/main/res/layout/fragment_discipline_form.xml
@@ -12,10 +12,10 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:contentDescription="@string/discipline_form_fragment_discipline_image_content_desc"
             android:id="@+id/disciplineForm_fragment_imageView"
             android:layout_width="0dp"
             android:layout_height="@dimen/imageView_big_height"
+            android:contentDescription="@string/discipline_form_fragment_discipline_image_content_desc"
             android:scaleType="centerCrop"
             android:src="@drawable/placeholder"
             app:layout_constraintEnd_toEndOf="parent"
@@ -71,7 +71,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/discipline_form_fragment_switch_addReminder"
-            app:startIconDrawable="@drawable/ic_email">
+            app:startIconDrawable="@drawable/ic_book">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
@@ -91,7 +91,8 @@
             app:helperTextEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/discipline_form_fragment_field_name">
+            app:layout_constraintTop_toBottomOf="@id/discipline_form_fragment_field_name"
+            app:startIconDrawable="@drawable/ic_text">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
@@ -110,7 +111,8 @@
             app:helperTextEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/discipline_form_fragment_field_description">
+            app:layout_constraintTop_toBottomOf="@id/discipline_form_fragment_field_description"
+            app:startIconDrawable="@drawable/ic_email">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
@@ -133,7 +135,7 @@
             <AutoCompleteTextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="none"/>
+                android:inputType="none" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
