customização alert Dialog e inicio adição de progress indicator

--- a/app/src/main/res/layout/alet_dialog_progress_bar.xml
+++ b/app/src/main/res/layout/alet_dialog_progress_bar.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@color/extraLightBrown">
 
         <com.airbnb.lottie.LottieAnimationView
             app:lottie_rawRes="@raw/dictionary"
@@ -24,7 +25,7 @@
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Buscando..."
+            android:text="@string/load_alert_dialog_text_search"
             android:layout_marginBottom="16dp"
             android:textSize="@dimen/defaultTextSize"
             />
