--- a/app/src/main/res/layout/public_tender_suggestion_dialog.xml
+++ b/app/src/main/res/layout/public_tender_suggestion_dialog.xml
@@ -1,114 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:fillViewport="true">
+    app:cardCornerRadius="@dimen/cornerRadius_default"
+   >
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:fillViewport="true">
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/public_tender_suggestion_dialog_textView_title"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin_default"
-            android:gravity="center"
-            android:text="@string/public_tender_suggestion_dialog_text_view_title"
-            android:textSize="@dimen/bigTextSize"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:background="@color/extraLightBrown">
 
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/public_tender_suggestion_dialog_textInputLayout_name"
-            style="@style/textField"
-            android:hint="@string/public_tender_suggestion_dialog_text_field_hint_name"
-            app:endIconMode="clear_text"
-            app:helperText="@string/common_mandatory"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/public_tender_suggestion_dialog_textView_title"
-            app:startIconDrawable="@drawable/ic_info">
-
-            <com.google.android.material.textfield.TextInputEditText
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/public_tender_suggestion_dialog_textView_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textAutoComplete" />
+                android:layout_margin="@dimen/margin_default"
+                android:gravity="center"
+                android:text="@string/public_tender_suggestion_dialog_text_view_title"
+                android:textSize="@dimen/mediumTextSize"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/public_tender_suggestion_dialog_textInputLayout_url"
-            style="@style/textField"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:helperText="@string/common_mandatory"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/public_tender_suggestion_dialog_textInputLayout_name"
-            app:startIconDrawable="@drawable/ic_link">
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/public_tender_suggestion_dialog_textInputLayout_name"
+                style="@style/textField"
+                android:hint="@string/public_tender_suggestion_dialog_text_field_hint_name"
+                app:endIconMode="clear_text"
+                app:helperText="@string/common_mandatory"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/public_tender_suggestion_dialog_textView_title"
+                app:startIconDrawable="@drawable/ic_info">
 
-            <com.google.android.material.textfield.TextInputEditText
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textAutoComplete" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/public_tender_suggestion_dialog_textInputLayout_url"
+                style="@style/textField"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/public_tender_suggestion_dialog_text_field_hint_url"
-                android:inputType="textUri" />
-        </com.google.android.material.textfield.TextInputLayout>
+                app:helperText="@string/common_mandatory"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/public_tender_suggestion_dialog_textInputLayout_name"
+                app:startIconDrawable="@drawable/ic_link">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/public_tender_suggestion_dialog_textInputLayout_description"
-            style="@style/textField"
-            android:hint="@string/public_tender_suggestion_dialog_text_field_hint_description"
-            app:counterEnabled="true"
-            app:counterMaxLength="300"
-            app:endIconMode="clear_text"
-            app:helperText="@string/common_optional"
-            app:helperTextEnabled="true"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/public_tender_suggestion_dialog_textInputLayout_url"
-            app:startIconDrawable="@drawable/ic_text">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/public_tender_suggestion_dialog_text_field_hint_url"
+                    android:inputType="textUri" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputEditText
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/public_tender_suggestion_dialog_textInputLayout_description"
+                style="@style/textField"
+                android:hint="@string/public_tender_suggestion_dialog_text_field_hint_description"
+                app:counterEnabled="true"
+                app:counterMaxLength="300"
+                app:endIconMode="clear_text"
+                app:helperText="@string/common_optional"
+                app:helperTextEnabled="true"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/public_tender_suggestion_dialog_textInputLayout_url"
+                app:startIconDrawable="@drawable/ic_text">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textAutoComplete"
+                    android:maxLength="300" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <LinearLayout
+                android:id="@+id/public_tender_suggestion_dialog_button_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textAutoComplete"
-                android:maxLength="300" />
+                android:layout_margin="@dimen/margin_default"
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/public_tender_suggestion_dialog_textInputLayout_description">
 
-        </com.google.android.material.textfield.TextInputLayout>
+                <Button
+                    android:id="@+id/public_tender_suggestion_dialog_button_negative"
+                    style="?android:attr/buttonBarButtonStyle"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/common_cancel" />
 
-        <LinearLayout
-            android:id="@+id/public_tender_suggestion_dialog_button_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin_default"
-            android:orientation="horizontal"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/public_tender_suggestion_dialog_textInputLayout_description">
-
-            <Button
-                android:id="@+id/public_tender_suggestion_dialog_button_negative"
-                style="?android:attr/buttonBarButtonStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/common_cancel" />
-
-            <Button
-                android:id="@+id/public_tender_suggestion_dialog_button_positive"
-                style="?android:attr/buttonBarButtonStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/common_confirm" />
+                <Button
+                    android:id="@+id/public_tender_suggestion_dialog_button_positive"
+                    style="?android:attr/buttonBarButtonStyle"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/common_confirm" />
 
 
-        </LinearLayout>
+            </LinearLayout>
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
+</androidx.cardview.widget.CardView>
