--- a/app/src/main/res/layout/fragment_public_tender.xml
+++ b/app/src/main/res/layout/fragment_public_tender.xml
@@ -42,7 +42,7 @@
         android:id="@+id/publicTenterFragment_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@id/publicTenderFragment_cardView_suggestion"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/publicTenderFragment_buttonToggleGroup"
@@ -85,8 +85,7 @@
         app:cardCornerRadius="@dimen/cornerRadius_default"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/publicTenterFragment_recyclerView">
+        app:layout_constraintStart_toStartOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
