--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="margin_default">16dp</dimen>
+    <dimen name="margin_small">8dp</dimen>
     <dimen name="elevation_default">8dp</dimen>
     <dimen name="cornerRadius_default">8dp</dimen>
     <dimen name="cardView_margin_default">8dp</dimen>
