--- a/app/src/main/res/layout/header_navigation_drawer.xml
+++ b/app/src/main/res/layout/header_navigation_drawer.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:fitsSystemWindows="true"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/header_container">
 
 
     <TextView
@@ -17,6 +18,7 @@
         android:textSize="@dimen/bigTextSize" />
 
     <TextView
+        android:id="@+id/header_subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/default_margin_items_header_drawer"
@@ -24,6 +26,7 @@
         android:layout_marginBottom="@dimen/default_margin_items_header_drawer"
         android:text="@string/header_drawer_subtitle"
         android:textSize="@dimen/defaultTextSize"
-        android:textColor="@color/extraLightBrown"/>
+
+        android:textColor="@color/customRed"/>
 
 </LinearLayout>
