--- a/app/src/main/res/layout/header_navigation_drawer.xml
+++ b/app/src/main/res/layout/header_navigation_drawer.xml
@@ -4,7 +4,8 @@
     android:layout_height="wrap_content"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
-    android:id="@+id/header_container">
+    android:id="@+id/header_container"
+    android:background="@color/colorPrimary">
 
 
     <TextView
@@ -14,7 +15,7 @@
         android:layout_marginTop="@dimen/default_margin_items_header_drawer"
         android:layout_marginEnd="@dimen/default_margin_items_header_drawer"
         android:text="@string/app_name"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorOnPrimary"
         android:textSize="@dimen/bigTextSize" />
 
     <TextView
@@ -26,7 +27,6 @@
         android:layout_marginBottom="@dimen/default_margin_items_header_drawer"
         android:text="@string/header_drawer_subtitle"
         android:textSize="@dimen/defaultTextSize"
-
-        android:textColor="@color/customRed"/>
+        android:textColor="@color/colorOnPrimary"/>
 
 </LinearLayout>
