--- a/app/src/main/res/layout/app_info_bottom_sheet_dialog.xml
+++ b/app/src/main/res/layout/app_info_bottom_sheet_dialog.xml
@@ -3,13 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/bg_app_info_bottom_sheet_dialog"
+
     android:padding="32dp">
 
     <TextView
         android:id="@+id/app_info_bottom_sheet_dialog_text_view_app_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:text="@string/app_name"
         android:textSize="@dimen/bigTextSize"
         android:textStyle="bold"
