--- a/app/src/main/res/layout/header_navigation_drawer.xml
+++ b/app/src/main/res/layout/header_navigation_drawer.xml
@@ -1,32 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/header_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:fitsSystemWindows="true"
-    android:orientation="vertical"
-    android:id="@+id/header_container"
-    android:background="@color/colorPrimary">
+    android:background="@color/colorPrimary"
+    android:fitsSystemWindows="true">
 
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/header_title"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/default_margin_items_header_drawer"
         android:layout_marginTop="@dimen/default_margin_items_header_drawer"
         android:layout_marginEnd="@dimen/default_margin_items_header_drawer"
         android:text="@string/app_name"
         android:textColor="@color/colorOnPrimary"
-        android:textSize="@dimen/bigTextSize" />
+        android:textSize="@dimen/bigTextSize"
+        app:layout_constraintBottom_toTopOf="@id/header_subtitle"
+        app:layout_constraintEnd_toEndOf="@id/header_guideline"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/header_shapeableImageView" />
 
     <TextView
         android:id="@+id/header_subtitle"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/default_margin_items_header_drawer"
         android:layout_marginEnd="@dimen/default_margin_items_header_drawer"
         android:layout_marginBottom="@dimen/default_margin_items_header_drawer"
-        android:text="@string/header_drawer_subtitle"
+        android:ellipsize="end"
+        android:maxLines="2"
+        android:textColor="@color/colorOnPrimary"
         android:textSize="@dimen/defaultTextSize"
-        android:textColor="@color/colorOnPrimary"/>
+        app:layout_constraintBottom_toBottomOf="@id/header_shapeableImageView"
+        app:layout_constraintEnd_toEndOf="@id/header_guideline"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/header_title"
+        app:layout_constraintVertical_bias="0.0"
+        tools:text="Subtitle with user email" />
 
-</LinearLayout>
+
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/header_shapeableImageView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="@dimen/margin_default"
+        android:elevation="@dimen/elevation_default"
+        android:scaleType="centerCrop"
+        android:src="@drawable/logo_app"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/header_guideline"
+        app:layout_constraintTop_toTopOf="parent"
+        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full" />
+
+    <Button
+        android:id="@+id/header_iconButton"
+        style="?attr/materialIconButtonStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/margin_default"
+        android:backgroundTint="@color/colorSurface"
+        android:elevation="@dimen/elevation_default"
+        app:icon="@drawable/ic_photo"
+        app:iconTint="@color/colorPrimary"
+        app:layout_constraintBottom_toBottomOf="@id/header_shapeableImageView"
+        app:layout_constraintEnd_toEndOf="@id/header_shapeableImageView"
+        app:layout_constraintTop_toBottomOf="@id/header_shapeableImageView"
+        />
+
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/header_guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.65" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
