--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -71,16 +71,6 @@
             android:name="disciplineId"
             app:argType="string"
             app:nullable="true" />
-        <action
-            android:id="@+id/action_disciplineFormFragment_to_disciplinesFragment"
-            app:destination="@id/disciplinesFragment"
-            app:enterAnim="@anim/nav_default_enter_anim"
-            app:exitAnim="@anim/nav_default_exit_anim"
-            app:launchSingleTop="false"
-            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-            app:popExitAnim="@anim/nav_default_pop_exit_anim"
-            app:popUpTo="@id/nav_graph"
-            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/pomodoroFragment"
@@ -112,4 +102,9 @@
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
             app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
+    <fragment
+        android:id="@+id/profileFragment"
+        android:name="com.example.studentdiary.ui.fragment.profileFragment.ProfileFragment"
+        android:label="@string/profile_fragment_toolbar_title"
+        tools:layout="@layout/fragment_profile" />
 </navigation>
