--- a/app/src/main/res/layout/fragment_pomodoro.xml
+++ b/app/src/main/res/layout/fragment_pomodoro.xml
@@ -11,19 +11,106 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/pomodoro_fragment_animation_chronometer"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:contentDescription="@string/disciplines_fragment_img_content_student"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.1"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"
+            app:lottie_rawRes="@raw/chronometer" />
+
 
         <TextView
             android:id="@+id/pomodoro_fragment_textView_time"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_default"
             android:gravity="center"
-            android:text="00:00:00"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:textSize="@dimen/bigTextSize"
+            android:textStyle="italic"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:textSize="@dimen/bigTextSize"
-            android:textStyle="italic"/>
+            app:layout_constraintTop_toBottomOf="@id/pomodoro_fragment_animation_chronometer"
+            tools:text="00:00"
+            app:layout_constraintBottom_toTopOf="@id/pomodoro_fragment_textView_interval"
+            />
+
+
+        <TextView
+            android:id="@+id/pomodoro_fragment_textView_interval"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="@dimen/mediumTextSize"
+            android:textStyle="italic"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/pomodoro_fragment_textView_time"
+            tools:text="00:00"
+            app:layout_constraintBottom_toTopOf="@id/pomodoro_fragment_textView_select_time_label"
+           />
+
+
+        <TextView
+            android:id="@+id/pomodoro_fragment_textView_select_time_label"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_default"
+            android:layout_marginHorizontal="@dimen/margin_default"
+            android:gravity="center"
+            app:layout_constraintBottom_toTopOf="@id/pomodoro_fragment_slider_timer"
+            android:text="@string/pomodoro_fragment_textView_select_time_label"
+            android:textSize="@dimen/defaultTextSize"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/pomodoro_fragment_textView_interval" />
+
+        <com.google.android.material.slider.RangeSlider
+            android:id="@+id/pomodoro_fragment_slider_timer"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/margin_default"
+            android:stepSize="5"
+            android:valueFrom="5.0"
+            android:valueTo="60.0"
+            app:layout_constraintBottom_toTopOf="@id/pomodoro_fragment_textView_select_interval_label"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/pomodoro_fragment_textView_select_time_label" />
+
+        <TextView
+            android:id="@+id/pomodoro_fragment_textView_select_interval_label"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/margin_default"
+            android:layout_marginTop="@dimen/margin_default"
+            android:gravity="center"
+            android:text="@string/pomodoro_fragment_textView_select_interval_label"
+            android:textSize="@dimen/defaultTextSize"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/pomodoro_fragment_slider_timer"
+            app:layout_constraintBottom_toTopOf="@id/pomodoro_fragment_slider_interval"/>
+
+        <com.google.android.material.slider.RangeSlider
+            android:id="@+id/pomodoro_fragment_slider_interval"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/margin_default"
+            android:stepSize="05.0"
+            android:valueFrom="05.0"
+            android:valueTo="60.0"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/pomodoro_fragment_textView_select_interval_label"
+            app:layout_constraintBottom_toTopOf="@id/pomodoro_fragment_button_pause"/>
+
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/pomodoro_fragment_button_start"
@@ -36,7 +123,8 @@
             android:src="@drawable/ic_play"
             app:layout_constraintEnd_toStartOf="@id/pomodoro_fragment_button_pause"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/pomodoro_fragment_textView_time" />
+            app:layout_constraintTop_toTopOf="@id/pomodoro_fragment_button_pause"
+            app:layout_constraintBottom_toBottomOf="@id/pomodoro_fragment_button_pause"/>
 
 
         <androidx.appcompat.widget.AppCompatImageButton
@@ -50,7 +138,8 @@
             android:src="@drawable/ic_pause"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/pomodoro_fragment_button_start"
-            app:layout_constraintTop_toBottomOf="@id/pomodoro_fragment_textView_time" />
+            app:layout_constraintTop_toBottomOf="@id/pomodoro_fragment_slider_interval"
+            app:layout_constraintBottom_toTopOf="@id/pomodoro_fragment_button_stop"/>
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/pomodoro_fragment_button_stop"
@@ -60,10 +149,12 @@
             android:backgroundTint="@color/colorSurface"
             android:elevation="@dimen/elevation_default"
             android:padding="16dp"
-            android:src="@drawable/ic_reset"
+            android:src="@drawable/ic_stop"
             app:layout_constraintEnd_toEndOf="parent"
-           app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/pomodoro_fragment_button_start" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/pomodoro_fragment_button_start"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
