--- a/app/src/main/res/layout/discipline_form_dialog.xml
+++ b/app/src/main/res/layout/discipline_form_dialog.xml
@@ -49,7 +49,8 @@
             app:layout_constraintTop_toBottomOf="@id/discipline_form_image_dialog_button_load"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:startIconDrawable="@drawable/ic_link">
+            app:startIconDrawable="@drawable/ic_link"
+            app:endIconMode="clear_text">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
